# AirVO

./: CMakeLists.txt  main.cpp  package.xml  ros_main.cpp  run_batch.py
cmake/: FindG2O.cmake
docker/withChrono/: Dockerfile  bashrc  buildChrono.sh
docker/withChrono/src/: vnc_startup.sh
include/: ros_publisher.h
src/: map_builder.cc  ros_publisher.cc
