<?xml version="1.0"?>
<package format="3">
  <name>air_vo</name>
  <version>0.0.0</version>
  <description>The AirVO package</description>
  <maintainer email="kuan.xu@ntu.edu.sg">xukuan</maintainer>
  <license>TODO</license>

  <!-- ROS 2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
